--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
   background-size: cover;
   background-repeat: no-repeat; }
 
-.centrar, .header__pag, .titulo__evento, .info__texto, .boton__app, .boton__app:hover, .center__cc, .titulo__nosotros, .titulo__marcas, .formulario, .formulario__card {
+.centrar, .header__pag, .grid__nosotros .formulario__boot .formulario__boot .center__cc, .grid__nosotros .titulo__nosotros, .grid__nosotros .titulo__marcas, .formulario__card, .info__app .info__texto, .info__app .boton__cuadro--app .boton__app, .info__app .boton__cuadro--app .boton__app:hover, .titulo__evento {
   justify-content: center;
   align-items: center; }
 
@@ -265,7 +265,7 @@ header {
   background-size: cover;
   background-repeat: no-repeat; }
 
-.centrar, .header__pag, .titulo__evento, .info__texto, .boton__app, .boton__app:hover, .center__cc, .titulo__nosotros, .titulo__marcas, .formulario, .formulario__card {
+.centrar, .header__pag, .grid__nosotros .formulario__boot .formulario__boot .center__cc, .grid__nosotros .titulo__nosotros, .grid__nosotros .titulo__marcas, .formulario__card, .info__app .info__texto, .info__app .boton__cuadro--app .boton__app, .info__app .boton__cuadro--app .boton__app:hover, .titulo__evento {
   justify-content: center;
   align-items: center; }
 
@@ -401,6 +401,199 @@ header {
   .main__tienda .ss {
     color: black; }
 
+/* NOSOTROS */
+.grid__nosotros {
+  display: grid;
+  width: 100vw;
+  height: 100vh;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 3fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 10px;
+  background-color: black; }
+  .grid__nosotros .formulario__boot {
+    grid-column: 6/7;
+    grid-row: 1/5; }
+    .grid__nosotros .formulario__boot .formulario__boot {
+      grid-column: 6/7;
+      grid-row: 1/5; }
+      .grid__nosotros .formulario__boot .formulario__boot .center__cc {
+        display: flex; }
+        .grid__nosotros .formulario__boot .formulario__boot .center__cc .titulo__contacto {
+          color: white; }
+  .grid__nosotros .titulo__nosotros {
+    display: grid;
+    grid-column: 1/5;
+    grid-row: 1/1;
+    color: white;
+    margin: 10px;
+    background-color: black;
+    text-align: center;
+    width: 100%; }
+    .grid__nosotros .titulo__nosotros .titulo__nosotros--txt {
+      display: grid;
+      grid-column: 1/5;
+      grid-row: 1/1;
+      width: 100%; }
+  .grid__nosotros .img__iconos {
+    grid-column: 1/5;
+    grid-row: 2/3;
+    background-image: url(../resources/iconos.png);
+    background-position: 50% 50%;
+    background-size: contain;
+    margin: 10px;
+    background-color: black;
+    background-repeat: no-repeat; }
+  .grid__nosotros .titulo__marcas {
+    display: flex;
+    grid-column: 2/4;
+    grid-row: 3/4;
+    width: 100%;
+    height: 80%;
+    margin-top: 50px;
+    text-align: center;
+    color: white;
+    background-color: black; }
+  .grid__nosotros .fotos__marca {
+    grid-column: 1/5;
+    grid-row: 4/5;
+    background-color: black;
+    width: 100%;
+    height: 100%; }
+  .grid__nosotros .speed__marca {
+    grid-column: 1/2;
+    grid-row: 4/5;
+    background-image: url(../resources/speedmarca.png);
+    background-position: 50% 50%;
+    background-size: 80%;
+    background-color: black;
+    background-repeat: no-repeat; }
+  .grid__nosotros .hodlmoser__marca {
+    grid-column: 2/3;
+    grid-row: 4/5;
+    background-image: url(../resources/hodlmosermarca.png);
+    background-position: 50% 50%;
+    background-size: 80%;
+    background-color: black;
+    background-repeat: no-repeat; }
+  .grid__nosotros .rena__marca {
+    grid-column: 3/4;
+    grid-row: 4/5;
+    background-image: url(../resources/renaissancemarca.png);
+    background-position: 50% 50%;
+    background-size: 80%;
+    background-color: black;
+    background-repeat: no-repeat; }
+  .grid__nosotros .block__marca {
+    grid-column: 4/5;
+    grid-row: 4/5;
+    background-image: url(../resources/block-energymarca.png);
+    background-position: 50% 50%;
+    background-size: 80%;
+    background-color: black;
+    background-repeat: no-repeat; }
+  .grid__nosotros .none1 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    background-image: none;
+    background-color: black; }
+  .grid__nosotros .none2 {
+    grid-column: 4/5;
+    grid-row: 3/4;
+    background-image: none;
+    background-color: black; }
+
+.btn {
+  grid-column: 6/7;
+  grid-row: 4/5;
+  background-color: red;
+  color: white;
+  border: solid #220202 1px; }
+
+.carousel {
+  width: 100vw; }
+
+.form-floating {
+  width: 30vw; }
+
+.shadow {
+  grid-column: 6/7;
+  grid-row: 1/5;
+  box-shadow: 0px 0px 50px red; }
+
+/* SPEED APP */
+.info__app {
+  display: grid;
+  width: 100vw;
+  height: 100vh;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 3fr 1fr 1fr; }
+  .info__app .info__foto {
+    grid-column: 1/2;
+    grid-row: 1/3;
+    background-color: black;
+    background-image: url(../resources/infoapp.jpg);
+    background-position: 50% 50%;
+    background-size: 100%;
+    background-repeat: no-repeat; }
+  .info__app .info__texto {
+    display: flex;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    background-color: black;
+    color: white; }
+    .info__app .info__texto .info__texto--cuadro {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 15px;
+      width: 70%;
+      font-size: 20px;
+      border: solid red 3px; }
+    .info__app .info__texto .app__texto {
+      text-align: center;
+      margin: 15px; }
+  .info__app .boton__cuadro--app {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    grid-column: 2/3;
+    grid-row: 2/3; }
+    .info__app .boton__cuadro--app .boton__app {
+      display: flex;
+      width: 300px;
+      height: 50px;
+      color: white;
+      font-size: large;
+      border-radius: 30px;
+      font-weight: bold;
+      background-image: linear-gradient(red, #5c1010); }
+      .info__app .boton__cuadro--app .boton__app:hover {
+        display: flex;
+        width: 300px;
+        height: 50px;
+        color: white;
+        font-size: large;
+        border-radius: 30px;
+        font-weight: bold;
+        background-image: linear-gradient(#5c1010, red);
+        transform: scale(1.1, 1.1);
+        transition: all 0.5s; }
+
+.info__app {
+  grid-column: 1/2;
+  grid-row: 1/4;
+  background-color: black; }
+
+.qr__app {
+  grid-column: 2/3;
+  grid-row: 3/4;
+  background-image: url(../resources/QRAPP.jpg);
+  background-position: 50% 50%;
+  background-size: 70%;
+  background-color: black;
+  background-repeat: no-repeat; }
+
 /* EVENTOS */
 .titulo__evento {
   display: flex;
@@ -498,19 +691,6 @@ header {
 body {
   overflow-x: hidden; }
 
-.text-light {
-  text-decoration: none;
-  font-family: "Fjalla One", sans-serif;
-  font-size: x-large;
-  margin: 15px; }
-
-.navbar-toggler {
-  border: 1px solid red; }
-
-.navbar-toggler .navbar-toggler-icon {
-  color: white;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28600, 600, 600, 2%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
-
 h1 {
   font-family: "Fjalla One", sans-serif; }
 
@@ -526,6 +706,19 @@ p {
 div {
   font-size: 16px; }
 
+.text-light {
+  text-decoration: none;
+  font-family: "Fjalla One", sans-serif;
+  font-size: x-large;
+  margin: 15px; }
+
+.navbar-toggler {
+  border: 1px solid red; }
+
+.navbar-toggler .navbar-toggler-icon {
+  color: white;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28600, 600, 600, 2%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
+
 .img__swipe {
   display: flex;
   width: 100vw;
@@ -534,240 +727,6 @@ div {
 .img__swipe--carrousel {
   margin-top: 5px;
   width: 100%; }
-
-/* SPEED APP */
-.info__app {
-  display: grid;
-  width: 100vw;
-  height: 100vh;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 3fr 1fr 1fr; }
-
-.info__app {
-  grid-column: 1/2;
-  grid-row: 1/4;
-  background-color: black; }
-
-.info__foto {
-  grid-column: 1/2;
-  grid-row: 1/3;
-  background-color: black;
-  background-image: url(../resources/infoapp.jpg);
-  background-position: 50% 50%;
-  background-size: 100%;
-  background-repeat: no-repeat; }
-
-.info__texto {
-  display: flex;
-  grid-column: 2/3;
-  grid-row: 1/2;
-  background-color: black;
-  color: white; }
-
-.qr__app {
-  grid-column: 2/3;
-  grid-row: 3/4;
-  background-image: url(../resources/QRAPP.jpg);
-  background-position: 50% 50%;
-  background-size: 70%;
-  background-color: black;
-  background-repeat: no-repeat; }
-
-.info__texto--cuadro {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
-  width: 70%;
-  font-size: 20px;
-  border: solid red 3px; }
-
-.app__texto {
-  text-align: center;
-  margin: 15px; }
-
-.boton__app {
-  display: flex;
-  width: 300px;
-  height: 50px;
-  color: white;
-  font-size: large;
-  border-radius: 30px;
-  font-weight: bold;
-  background-image: linear-gradient(red, #5c1010); }
-
-.boton__app:hover {
-  display: flex;
-  width: 300px;
-  height: 50px;
-  color: white;
-  font-size: large;
-  border-radius: 30px;
-  font-weight: bold;
-  background-image: linear-gradient(#5c1010, red);
-  transform: scale(1.1, 1.1);
-  transition: all 0.5s; }
-
-.boton__cuadro--app {
-  display: flex;
-  justify-content: center;
-  background-color: black;
-  grid-column: 2/3;
-  grid-row: 2/3; }
-
-/* NOSOTROS */
-.grid__nosotros {
-  display: grid;
-  width: 100vw;
-  height: 100vh;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 3fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  gap: 10px;
-  background-color: black; }
-
-.shadow {
-  grid-column: 6/7;
-  grid-row: 1/5;
-  box-shadow: 0px 0px 50px red; }
-
-.formulario__boot {
-  grid-column: 6/7;
-  grid-row: 1/5; }
-
-.center__cc {
-  display: flex; }
-
-.titulo__contacto {
-  color: white; }
-
-.form-floating {
-  width: 30vw; }
-
-.titulo__nosotros {
-  display: grid;
-  grid-column: 1/5;
-  grid-row: 1/1;
-  color: white;
-  margin: 10px;
-  background-color: black;
-  text-align: center;
-  width: 100%; }
-
-.titulo__nosotros--txt {
-  display: grid;
-  grid-column: 1/5;
-  grid-row: 1/1;
-  width: 100%; }
-
-.img__iconos {
-  grid-column: 1/5;
-  grid-row: 2/3;
-  background-image: url(../resources/iconos.png);
-  background-position: 50% 50%;
-  background-size: contain;
-  margin: 10px;
-  background-color: black;
-  background-repeat: no-repeat; }
-
-.titulo__marcas {
-  display: flex;
-  grid-column: 2/4;
-  grid-row: 3/4;
-  width: 100%;
-  height: 80%;
-  margin-top: 50px;
-  text-align: center;
-  color: white;
-  background-color: black; }
-
-.fotos__marca {
-  grid-column: 1/5;
-  grid-row: 4/5;
-  background-color: black;
-  width: 100%;
-  height: 100%; }
-
-.speed__marca {
-  grid-column: 1/2;
-  grid-row: 4/5;
-  background-image: url(../resources/speedmarca.png);
-  background-position: 50% 50%;
-  background-size: 80%;
-  background-color: black;
-  background-repeat: no-repeat; }
-
-.hodlmoser__marca {
-  grid-column: 2/3;
-  grid-row: 4/5;
-  background-image: url(../resources/hodlmosermarca.png);
-  background-position: 50% 50%;
-  background-size: 80%;
-  background-color: black;
-  background-repeat: no-repeat; }
-
-.rena__marca {
-  grid-column: 3/4;
-  grid-row: 4/5;
-  background-image: url(../resources/renaissancemarca.png);
-  background-position: 50% 50%;
-  background-size: 80%;
-  background-color: black;
-  background-repeat: no-repeat; }
-
-.block__marca {
-  grid-column: 4/5;
-  grid-row: 4/5;
-  background-image: url(../resources/block-energymarca.png);
-  background-position: 50% 50%;
-  background-size: 80%;
-  background-color: black;
-  background-repeat: no-repeat; }
-
-.formulario {
-  display: flex;
-  flex-direction: column;
-  grid-column: 6/7;
-  grid-row: 1/3;
-  height: 30vw;
-  color: white;
-  font-size: 16px;
-  margin: 15px;
-  padding: 10px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  border-radius: 15px;
-  background-color: #5f1515;
-  box-shadow: 0px 0px 50px red; }
-
-.none1 {
-  grid-column: 1/2;
-  grid-row: 3/4;
-  background-image: none;
-  background-color: black; }
-
-.none2 {
-  grid-column: 4/5;
-  grid-row: 3/4;
-  background-image: none;
-  background-color: black; }
-
-.form__input {
-  margin: 5px;
-  background-color: #a12323;
-  color: white;
-  width: 300px;
-  border: solid red 1px;
-  border-radius: 4px; }
-
-.btn {
-  grid-column: 6/7;
-  grid-row: 4/5;
-  background-color: red;
-  color: white;
-  border: solid #220202 1px; }
-
-.carousel {
-  width: 100vw; }
 
 /* celular */
 @media (min-width: 320px) and (max-width: 575px) {
