--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,8 @@
 @import "operators";
 @import "main-pages/index";
 @import "main-pages/tienda";
+@import "main-pages/nosotros";
+@import "main-pages/speed-app";
 @import "main-pages/eventos";
 
 
@@ -18,22 +20,6 @@ body{
     overflow-x: hidden;
 }
 
-.text-light {
-    text-decoration: none;
-    font-family: $font-titulos;
-    font-size: x-large;
-    margin: 15px;
-}
-
-.navbar-toggler{
-    border: 1px solid $color-secundario;
-
-}
-
-.navbar-toggler .navbar-toggler-icon {
-    color: white;
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28600, 600, 600, 2%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-}
 
 h1{
     font-family: $font-titulos;
@@ -56,6 +42,24 @@ div{
 }
 
 
+.text-light {
+    text-decoration: none;
+    font-family: $font-titulos;
+    font-size: x-large;
+    margin: 15px;
+}
+
+.navbar-toggler{
+    border: 1px solid $color-secundario;
+
+}
+
+.navbar-toggler .navbar-toggler-icon {
+    color: white;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28600, 600, 600, 2%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+
 .img__swipe{
     display: flex;
     width: 100vw;
@@ -67,287 +71,5 @@ div{
     width: 100%
 }
 
-
-
-/* SPEED APP */
-
-.info__app{
-    display: grid;
-    width: 100vw;
-    height: 100vh;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 3fr 1fr 1fr;
-}
-
-.info__app{
-    grid-column: 1/2;
-    grid-row: 1/4;
-    background-color: $color-principal;
-}
-
-.info__foto{
-    grid-column: 1/2;
-    grid-row: 1/3;
-    background-color: $color-principal;
-    background-image: url(../resources/infoapp.jpg);
-    background-position: 50% 50%;
-    background-size:100%;
-    background-repeat: no-repeat;
-}
-
-.info__texto{
-    display: flex;
-    grid-column: 2/3;
-    grid-row: 1/2;
-    background-color: $color-principal;
-    @extend .centrar;
-    color: white;
-}
-
-.qr__app{
-    grid-column: 2/3;
-    grid-row: 3/4;
-    background-image: url(../resources/QRAPP.jpg);
-    background-position: 50% 50%;
-    background-size:70%;
-    background-color: $color-principal;
-    background-repeat: no-repeat;
-}
-
-.info__texto--cuadro{
-    display: flex;
-    @include flex(column, center, center);
-    padding: 15px;
-    width: 70%;
-    font-size: 20px;
-    border: solid $color-secundario 3px;
-}
-
-.app__texto{
-    text-align: center;
-    margin: 15px;
-}
-
-.boton__app{
-    display: flex;
-    @extend .centrar;
-    width: 300px;
-    height: 50px;
-    color: white;
-    font-size: large;
-    border-radius: 30px;
-    font-weight: bold;
-    background-image: linear-gradient(rgb(255, 0, 0), rgb(92, 16, 16));
-}
-
-.boton__app:hover{
-    display: flex;
-    @extend .centrar;
-    width: 300px;
-    height: 50px;
-    color: white;
-    font-size: large;
-    border-radius: 30px;
-    font-weight: bold;
-    background-image: linear-gradient(rgb(92, 16, 16), rgb(255, 0, 0));
-    transform: scale(1.10, 1.10);
-    transition: all 0.5s;
-}
-
-
-
-.boton__cuadro--app{
-    display: flex;
-    justify-content:center;
-    background-color: $color-principal;
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-
-/* NOSOTROS */
-
-.grid__nosotros{
-    display: grid;
-    width: 100vw;
-    height: 100vh;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 3fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    gap: 10px;
-    background-color: $color-principal;
-}
-
-.shadow{
-    grid-column: 6/7;
-    grid-row: 1/5;
-    box-shadow: 0px 0px 50px $color-secundario;
-}
-
-.formulario__boot{
-    grid-column: 6/7;
-    grid-row: 1/5;
-}
-
-.center__cc{
-    display: flex;
-    @extend .centrar;
-}
-
-.titulo__contacto{
-    color: white;
-}
-
-
-.form-floating{
-    width: 30vw;
-}
-
-.titulo__nosotros{
-    display: grid;
-    grid-column: 1/5;
-    grid-row: 1/1;
-    @extend .centrar;
-    color: white;
-    margin: 10px;
-    background-color: $color-principal;
-    text-align: center;
-    width: 100%;
-}
-
-.titulo__nosotros--txt{
-    display: grid;
-    grid-column: 1/5;
-    grid-row:  1/1;
-    width: 100%;
-}
-
-.img__iconos{
-    grid-column: 1/5;
-    grid-row: 2/3;
-    background-image: url(../resources/iconos.png);
-    background-position: 50% 50%;
-    background-size:contain;
-    margin: 10px;
-    background-color: $color-principal;
-    background-repeat: no-repeat;
-}
-
-.titulo__marcas{
-    display: flex;
-    grid-column: 2/4;
-    grid-row: 3/4;
-    width: 100%;
-    height: 80%;
-    margin-top: 50px;
-    @extend .centrar;
-    text-align: center;
-    color: white;
-    background-color: $color-principal;
-}
-
-.fotos__marca{
-    grid-column: 1/5;
-    grid-row: 4/5;
-    background-color: $color-principal;
-    width: 100%;
-    height: 100%;
-
-}
-
-.speed__marca{
-    grid-column: 1/2;
-    grid-row: 4/5;
-    background-image: url(../resources/speedmarca.png);
-    background-position: 50% 50%;
-    background-size:80%;
-    background-color: $color-principal;
-    background-repeat: no-repeat;
-
-}
-
-.hodlmoser__marca{
-    grid-column: 2/3;
-    grid-row: 4/5;
-    background-image: url(../resources/hodlmosermarca.png);
-    background-position: 50% 50%;
-    background-size:80%;
-    background-color: $color-principal;
-    background-repeat: no-repeat;
-}
-
-.rena__marca{
-    grid-column: 3/4;
-    grid-row: 4/5;
-    background-image: url(../resources/renaissancemarca.png);
-    background-position: 50% 50%;
-    background-size:80%;   
-    background-color: $color-principal;
-    background-repeat: no-repeat;
-}
-
-.block__marca{
-    grid-column: 4/5;
-    grid-row: 4/5;
-    background-image: url(../resources/block-energymarca.png);
-    background-position: 50% 50%;
-    background-size:80%;
-    background-color: $color-principal;
-    background-repeat: no-repeat;
-}
-
-.formulario{
-    display: flex;
-    flex-direction: column;
-    @extend .centrar;
-    grid-column: 6/7;
-    grid-row: 1/3;
-    height: 30vw;
-    color: white;
-    font-size: 16px;
-    margin: 15px;
-    padding: 10px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    border-radius: 15px;
-    background-color: rgb(95, 21, 21);
-    box-shadow: 0px 0px 50px $color-secundario;
-}
-
-.formulario__card{
-    @extend .centrar;
-}
-
-.none1{
-    grid-column: 1/2;
-    grid-row: 3/4;
-    background-image: none;
-    background-color: $color-principal;
-}
-
-.none2{
-    grid-column: 4/5;
-    grid-row: 3/4;
-    background-image: none;
-    background-color: $color-principal;
-}
-
-.form__input{
-    margin: 5px;
-    background-color: rgb(161, 35, 35);
-    color: white;
-    width: 300px;
-    border: solid $color-secundario 1px;
-    border-radius: 4px;
-}
-
-.btn{
-    grid-column: 6/7;
-    grid-row: 4/5;
-    background-color: $color-secundario;
-    color: white;
-    border: solid rgb(34, 2, 2) 1px;
-}
-
-.carousel{
-    width: 100vw;
-}
 
 @import "mediaqueries";
